# Laconic-OT-with-faster-initialization-and-decryption

./: CMakeLists.txt  README.md  common.cpp  main.cpp  test.cpp
include/: common.h  lPSI.h  test.h
